Refactor places and waypoints pages for improved functionality and UI
- Updated `places.html` to enhance the header section layout and added a message display for user feedback.
- Modified the itinerary form action to include country code in the URL.
- Changed the waypoints form to use async fetch for adding waypoints, providing better error handling and user feedback.
- Introduced a new `waypoints_manager.js` script to handle waypoint removal via AJAX.
- Enhanced `waypoints_page.html` to include a remove button for each waypoint, improving user interaction.
- Added a new CSS file `map.css` for styling the map and related components, ensuring a consistent look and feel.
- Updated JavaScript logic in `routes_manager.js` to manage waypoints and routes more effectively, including marker handling and route computation.
- Ensured all changes are reflected in the compiled classes and resources.