@@ -2,7 +2,6 @@ package com.sds2.service;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
@@ -22,35 +21,32 @@ public class RoutesService {
     private final WebClient.Builder webClientBuilder;
     private final WaypointService waypointsService;
 
-    private void addRoute(Route route) {
-        if (route != null) {
-            routesRepository.save(route);
-        }
-    }
+    public String saveRoute(RouteRequest req) {
 
-    public boolean saveRoute(RouteRequest req, String routeIdentifier) {
+        Double lat = req.getOrigin().getLat();
+        Double lng = req.getOrigin().getLng();
 
-        Route existing = routesRepository.findByRouteIdentifier(routeIdentifier);
+        Route existing = routesRepository.findByRouteIdentifier(req.getRouteIdentifier());
         if (existing != null) {
-            return false;
+            return "Route identifier already exists";
         }
 
         Waypoint origin = waypointsService.findWaypointByCoordinates(
-                req.getOrigin().getLat(),
-                req.getOrigin().getLng()
+            lat,
+            lng
         );
 
         if (origin == null) {
             waypointsService.addWaypoint(req.getOrigin());
             origin = waypointsService.findWaypointByCoordinates(
-                    req.getOrigin().getLat(),
-                    req.getOrigin().getLng()
+                    lat,
+                    lng
             );
         }
 
         Waypoint destination = waypointsService.findWaypointByCoordinates(
-                req.getDestination().getLat(),
-                req.getDestination().getLng()
+                lat,
+                lng
         );
 
         List<Waypoint> intermediates = Arrays.stream(req.getIntermediates())
@@ -58,139 +54,20 @@ public class RoutesService {
                         i.getLat(),
                         i.getLng()
                 ))
-                .collect(Collectors.toList());
+                .toList();
 
 
         Route route = Route.builder()
-                .routeIdentifier(routeIdentifier)
+                .routeIdentifier(req.getRouteIdentifier())
                 .origin(origin)
                 .destination(destination)
                 .intermediates(intermediates)
                 .travelMode(req.getTravelMode())
-                // .distanceMeters(req.getDistanceMeters())
-                // .departureTime(req.getDepartureTime())
-                // .arrivalTime(req.getArrivalTime())
-                // .encodedPolyline(req.getEncodedPolyline())
                 .build();
 
         routesRepository.save(route);
-        return true;
+        return "Route saved successfully";
     }
 
-
-    // public String buildComputeRoutesBody(RouteRequest req) throws JsonProcessingException {
-    //     ObjectMapper mapper = new ObjectMapper();
-
-    //     ObjectNode root = mapper.createObjectNode();
-
-    //     ObjectNode originNode = root.putObject("origin")
-    //                             .putObject("location")
-    //                             .putObject("latLng");
-    //     originNode.put("latitude", req.getOrigin().getLat());
-    //     originNode.put("longitude", req.getOrigin().getLng());
-
-    //     ObjectNode destNode = root.putObject("destination")
-    //                             .putObject("location")
-    //                             .putObject("latLng");
-    //     destNode.put("latitude", req.getDestination().getLat());
-    //     destNode.put("longitude", req.getDestination().getLng());
-
-    //     ArrayNode intermediatesNode = root.putArray("intermediates");
-    //     for (WaypointRequest wp : req.getIntermediates()) {
-    //         ObjectNode wpNode = intermediatesNode.addObject();
-    //         ObjectNode loc = wpNode.putObject("location").putObject("latLng");
-    //         loc.put("latitude", wp.getLat());
-    //         loc.put("longitude", wp.getLng());
-    //     }
-
-    //     root.put("travelMode", req.getTravelMode().name());
-    //     root.put("routingPreference", "TRAFFIC_AWARE");
-    //     root.put("departureTime", DataISOFormatter.formatToISO8601(req.getDepartureTime()));
-    //     root.put("computeAlternativeRoutes", false);
-
-    //     ObjectNode routeModifiers = root.putObject("routeModifiers");
-    //     routeModifiers.put("avoidTolls", false);
-    //     routeModifiers.put("avoidHighways", false);
-    //     routeModifiers.put("avoidFerries", false);
-
-    //     root.put("languageCode", "en-US");
-    //     root.put("units", "METRIC");
-
-    //     return mapper.writeValueAsString(root);
-    // }
-
-    // private RouteDTO mapToRouteDTO(RouteResponse response, RouteRequest req, String routeIdentifier) {
-
-    //     Waypoint o = waypointsService.findWaypointByCoordinates(
-    //         req.getOrigin().getLat(),
-    //         req.getOrigin().getLng()
-    //     );
-
-    //     Waypoint d = waypointsService.findWaypointByCoordinates(
-    //         req.getDestination().getLat(),
-    //         req.getDestination().getLng()
-    //     );
-
-    //     Route route = Route.builder()
-    //         .routeIdentifier(routeIdentifier)
-    //         .travelMode(req.getTravelMode())
-    //         .origin(o)
-    //         .destination(d)
-    //         .distanceMeters(response.getRoutes().get(0).getLegs()[0].getDistanceMeters())
-    //         .duration(response.getRoutes().get(0).getLegs()[0].getDuration())
-    //         .encodedPolyline(response.getRoutes().get(0).getLegs()[0].getPolyline().getEncodedPolyline())
-    //         .build();
-
-    //     addRoute(route);
-
-    //     RouteLeg leg = response.getRoutes().get(0).getLegs()[0];
-    //     return new RouteDTO(
-    //         leg.getDistanceMeters(),
-    //         leg.getDuration(),
-    //         req.getOrigin().getName(),
-    //         req.getDestination().getName(),
-    //         leg.getPolyline().getEncodedPolyline()
-    //     );
-    // }
-
-    // public RouteDTO computeRoute(RouteRequest req, String routeIdentifier) throws JsonProcessingException {
-
-    // Route route = routesRepository.findByRouteIdentifier(routeIdentifier);
-    // if (route != null) {
-    //     return new RouteDTO(
-    //         route.getDistanceMeters(),
-    //         route.getDuration(),
-    //         req.getOrigin().getName(),
-    //         req.getDestination().getName(),
-    //         route.getEncodedPolyline()
-    //     );
-    // }
-
-    // String url = "https://routes.googleapis.com/directions/v2:computeRoutes";
-
-    // String body = buildComputeRoutesBody(req);
-
-    // Logger logger = Logger.getLogger(RoutesService.class.getName());
-    // logger.info("Request Body: " + body);
-
-    // RouteResponse response = webClientBuilder.build()
-    //     .post()
-    //     .uri(url)
-    //     .header(GoogleBodyEnum.CONTENTTYPE.getValue(), GoogleBodyEnum.APPLICATIONJSON.getValue())
-    //     .header(GoogleBodyEnum.X_GOOG_API_KEY.getValue(), googleAuthService.getApiKey())
-    //     .header(GoogleBodyEnum.X_GOOG_FIELD_MASK.getValue(),
-    //             "routes.duration,routes.distanceMeters,routes.legs,routes.polyline.encodedPolyline")
-    //     .bodyValue(body)
-    //     .retrieve()
-    //     .bodyToMono(RouteResponse.class)
-    //     .block();
-
-    // if (response == null || response.getRoutes().isEmpty()) {
-    //     throw new RuntimeException("No route data received from Google Routes API");
-    // }
-
-    // return mapToRouteDTO(response, req, routeIdentifier);
-
-    // }
 }
 
